--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           github_user_name: gemesquita
           outputs: |
-            dist/github-snake.svg?color_snake=red&color_dots=#161b22,#0d1117,#ff6b6b,#ee5a5a,#dc2626
-            dist/github-snake-dark.svg?color_snake=#dc2626&color_dots=#161b22,#0d1117,#7f1d1d,#b91c1c,#dc2626
+            dist/github-snake.svg?color_snake=#dc2626
+            dist/github-snake-dark.svg?color_snake=#dc2626
       - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
