--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           github_user_name: gemesquita
           outputs: |
-            dist/github-snake.svg?color_snake=#dc2626
-            dist/github-snake-dark.svg?color_snake=#dc2626
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
       - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
